# roughsets-base

./: .env  .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  requirements.dev.txt  run_tests.sh  setup.cfg  tox.ini
src/roughsets_base/: __init__.py  roughset_dt.py  roughset_si.py
tests/: KDD99_compare_with_R_RoughSets.R  test_dataset_1.py  test_dataset_2.py  test_dataset_3.py  test_dataset_KDD99.py  test_t_abstract_base.py
tests/abstract/: t_roughset.py
tests/datasets/1/: IND_OF_X_EXT.csv  X_IND.csv  approx_indices.csv  approx_subsets.csv  y_IND.csv
tests/datasets/2/: IND_OF_X.csv  IND_OF_X_EXT.csv  X.csv  X_IND.csv  approx_indices.csv  y_IND.csv
tests/datasets/3/: IND_OF_X.csv  IND_OF_X_EXT.csv  X.csv  X_IND.csv  approx_indices.csv  approx_subsets.csv  y.csv  y_IND.csv
tests/datasets/KDD99/: approx_subsets.csv  columns.txt  kdd_boundary_region_A.csv  kdd_positive_region_B.csv  subsets.txt
