[metadata]
name = roughsets-base
version = 1.0.1
author = Dariusz Jankowski
author_email = darekjki@gmail.com
description = "The library contains base functions of the RoughSets Theory (introduced by Zdzisław Pawlak in 1982)."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/darekjki/roughsets-base
project_urls =
    Bug Tracker = https://github.com/darekjki/roughsets-base/issues
    Documentation = https://github.com/darekjki/roughsets-base/
    Source Code = https://github.com/darekjki/roughsets-base
classifiers =
    Development Status :: 5 - Production/Stable

    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

    Intended Audience :: Science/Research
    Intended Audience :: Developers

    License :: OSI Approved :: BSD License

    Programming Language :: Python :: 3

    Operating System :: OS Independent
    Environment :: Console

    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

install_requires =
    pandas>=1.2

[options.packages.find]
where = src
